# trame-tweakpane

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
.github/workflows/: test_and_release.yml
examples/: readme_example.py  simple.py
tests/: test_import.py
trame/modules/: tweakpane.py
trame/widgets/: tweakpane.py
trame_tweakpane/: __init__.py
trame_tweakpane/module/: __init__.py
trame_tweakpane/widgets/: tweakpane.py
vue-components/: package-lock.json  package.json  vite.config.js
vue-components/src/: main.js
vue-components/src/components/: Binding.js  BladeList.js  BladeSeparator.js  BladeSlider.js  BladeText.js  Button.js  Folder.js  Pane.js  Tab.js  Tabs.js  index.js
vue-components/src/utils/: blades.js
